--- a/resume.css
+++ b/resume.css
@@ -1,4 +1,20 @@
-div{
-  border: 1px solid black;
-  margin: -1px;
+*{
+  /*border: 1px solid black;*/
+}
+header{
+  height: 350px;
+  background-color: #90ee90;
+}
+.fix-width{
+  max-width: 100%
+}
+
+#avatar{
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  padding: 5px;
+  background-color: white;
+  margin-top: -78px;
+  width: 150px;
+  height: 150px;
 }
